--- a/templates/anime_downloader_anilife_search.html
+++ b/templates/anime_downloader_anilife_search.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %} {% block content %}
+<link rel="stylesheet" href="{{ url_for('.static', filename='css/mobile_custom.css') }}"/>
+<link rel="stylesheet" href="{{ url_for('.static', filename='css/' ~ arg['sub'] ~ '.css') }}"/>
+
+
     <div id="preloader" class="content-cloak">
         <div class='demo'>
             <!--        <div class="loader-inner">-->
@@ -802,6 +806,7 @@
             line-height: 1.3;
             display: -webkit-box;
             -webkit-line-clamp: 2;
+            line-clamp: 2;
             -webkit-box-orient: vertical;
             overflow: hidden;
         }
@@ -1226,63 +1231,6 @@ $(document).ready(function(){
   }, 100);
 });
 </script>
-<style>
-/* Mobile Margin Fix */
-@media (max-width: 768px) {
-    body { overflow-x: hidden !important; padding: 0 !important; margin: 0 !important; padding-top: 5px !important; }
-    
-    /* First nav (main menu) */
-    ul.nav.nav-pills.bg-light:first-of-type {
-        margin-top: 50px !important;
-        margin-bottom: 5px !important;
-    }
-    
-    /* Second nav (sub menu) */
-    ul.nav.nav-pills.bg-light {
-        margin-top: 0 !important;
-        margin-bottom: 8px !important;
-        width: 100% !important;
-        display: flex !important;
-        flex-wrap: wrap !important;
-        justify-content: center !important;
-        border-radius: 10px !important;
-        padding: 4px !important;
-        gap: 2px !important;
-    }
-    
-    ul.nav.nav-pills .nav-link {
-        padding: 5px 10px !important;
-        font-size: 12px !important;
-    }
-    ul.nav.nav-pills .nav-item {
-        margin: 1px !important;
-    }
-    .container, .container-fluid, .row, form, #program_list, #program_auto_form, #episode_list, .queue-container, #yommi_wrapper, #main_container {
-        width: 100% !important; max-width: 100% !important;
-        padding-left: 4px !important; padding-right: 4px !important;
-        margin-left: 0 !important; margin-right: 0 !important;
-        box-sizing: border-box !important;
-    }
-    .form-group, .form-inline, [class*="col-"] {
-        flex: 0 0 100% !important; max-width: 100% !important; width: 100% !important;
-        padding-left: 0 !important; padding-right: 0 !important;
-    }
-    .row { margin-left: 0 !important; margin-right: 0 !important; }
-    .card, .card.p-4, .card.p-lg-5, .card.border-light {
-         width: calc(100% - 8px) !important; max-width: 100% !important;
-         padding: 8px !important; margin: 4px !important;
-         border-radius: 12px !important; box-sizing: border-box !important;
-    }
-    .badge {
-        white-space: normal !important; text-align: left !important;
-        line-height: 1.4 !important; height: auto !important; display: inline-block !important;
-    }
-    
-    /* Search Button Size Reduction */
-    .input-group #btn_search {
-        padding: 8px 14px !important;
-        font-size: 13px !important;
-    }
-}
 </style>
+
 {% endblock %}
