--- a/templates/anime_downloader_linkkf_category.html
+++ b/templates/anime_downloader_linkkf_category.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %} {% block content %}
+<link rel="stylesheet" href="{{ url_for('.static', filename='css/mobile_custom.css') }}"/>
+<link rel="stylesheet" href="{{ url_for('.static', filename='css/' ~ arg['sub'] ~ '.css') }}"/>
+
 
 <div class="input-group mb-2">
     <input
