--- a/templates/anime_downloader_linkkf_request.html
+++ b/templates/anime_downloader_linkkf_request.html
@@ -236,6 +236,14 @@
 
         });
 
+        // Enter 키로 검색 트리거
+        $("#code").on('keypress', function (e) {
+            if (e.which === 13) { // Enter key
+                e.preventDefault();
+                $("#analysis_btn").click();
+            }
+        });
+
         $("#analysis_btn").unbind("click").bind('click', function (e) {
             e.preventDefault();
             e.stopPropagation()
